# Tergum

./: .env.example  .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
src/: cmd.rs  local.rs  main.rs  reader.rs  remote.rs  types.rs
src/local/: reader.rs  tfs.rs
