[package]
name = "tergum"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
chrono = "0.4.25"
clap = { version = "4.3.0", features = ["derive"] }
dotenv = "0.15.0"
flate2 = "1.0.26"
fs_extra = "1.3.0"
glob = "0.3.1"
log = "0.4.17"
regex = "1.8.3"
rust-s3 = "0.33.0"
simple_logger = "4.1.0"
tar = "0.4.38"
tokio = { version = "1.28.2", features = ["full"] }
zip = "0.6.6"
zopfli = "0.7.4"
